sort stars by their magnitude, draw a white border (avoid star overlaps)

--- a/style/default.css
+++ b/style/default.css
@@ -203,3 +203,21 @@ text-align: center;
 td {
 	font-size: 11px;
 }
+
+.happy, .sad, .meh{
+    background-size: contain;
+    background-repeat: no-repeat;
+    width: 12px;
+    height: 12px;
+    margin: 2px;
+}
+    
+.happy {
+    background-image: url('../resources/happy.png');
+}
+.sad {
+    background-image: url('../resources/sad.png');
+}
+.meh {
+    background-image: url('../resources/meh.png');
+}
